[package]
name = "ultron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
scraper = "0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
regex = "1"
serde_json = "1.0"
once_cell = "1.18"
dotenv = "0.15.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[features]
testing = []
