[package]
name = "ultron"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-postgres = "0.7"
scraper = "0.19"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
regex = "1"
serde_json = "1.0"
once_cell = "1.18"
dotenv = "0.15.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }
clap = { version = "4.4", features = ["derive"] }
csv = "1.1"
encoding_rs = "0.8"
config = "0.14"
serde_yaml = "0.9"
lazy_static = "1.5"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
reqwest-retry = "0.6"
reqwest-middleware = "0.3"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[features]
testing = []

[[bin]]
name = "ultron"
path = "src/main.rs"
